syntax = "proto3";
package symphony.gamm.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "symphony/gamm/v1beta1/shared.proto";
import "symphony/gamm/v1beta1/params.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/gamm/types";

// GenesisState defines the gamm module's genesis state.
message GenesisState {
  repeated google.protobuf.Any pools = 1
      [ (cosmos_proto.accepts_interface) = "PoolI" ];
  // will be renamed to next_pool_id in an upcoming version
  uint64 next_pool_number = 2;
  Params params = 3 [ (gogoproto.nullable) = false ];
  MigrationRecords migration_records = 4;
}
